gcc/testsuite/rust/rustc/ui/parser/inner-attr.rs
#[feature(lang_items)]

#![recursion_limit="100"] // { dg-error "" "" { target *-*-* } }
fn main() {}

